--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
   ],
   "author": "Magical Coder From Mars",
   "license": "MIT",
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
+  },
+  "files": [
+    "dist"  
+  ]
 }
