--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ESNext", // More modern output
-    "module": "CommonJS", // Still fine for npm
+    "target": "ESNext", // compile to the latest ES
+    "module": "CommonJS", // Outputs modules in CommonJS format (require, module.exports)
     "outDir": "dist", // ⬅️ Output JS + .d.ts files here
     "declaration": true, // ⬅️ Generate .d.ts files
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
+    "esModuleInterop": true, // Allows default imports from CommonJS modules.
+    "forceConsistentCasingInFileNames": true, // Ensures consistent casing in file names.
+    "strict": true, // Enables all strict type-checking options.
+    "skipLibCheck": true // Skips type-checking for .d.ts files.
   },
   "include": ["src"] // ⬅️ Only compile what's in /src
 }
